--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,14 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:fullBackupContent="true"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
             android:name=".SplashScreen"
@@ -25,13 +25,13 @@
         <activity android:name=".DashboardActivity" />
         <activity
             android:name=".HelpActivity"
-            android:parentActivityName="com.dk.watercup.DashboardActivity">
-        </activity>
+            android:parentActivityName=".DashboardActivity"></activity>
         <activity android:name=".AddProjectActivity" />
         <activity
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            android:name=".LoginActivity" />
+            android:name=".LoginActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar" />
         <activity android:name=".FormActivity" />
+        <activity android:name=".StatsActivity"></activity>
     </application>
 
 </manifest>
