added statsActivity, recycler view

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,11 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-<<<<<<< HEAD
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-=======
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
->>>>>>> 9c7c6c8dfa6ac6ef18b1be27acecbda9a91f5642
 
     <application
         android:allowBackup="true"
@@ -29,18 +26,13 @@
         <activity android:name=".DashboardActivity" />
         <activity
             android:name=".HelpActivity"
-            android:parentActivityName=".DashboardActivity"></activity>
+            android:parentActivityName=".DashboardActivity" />
         <activity android:name=".AddProjectActivity" />
         <activity
-<<<<<<< HEAD
             android:name=".LoginActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar" />
-=======
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:name=".LoginActivity" />
->>>>>>> 9c7c6c8dfa6ac6ef18b1be27acecbda9a91f5642
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".FormActivity" />
-        <activity android:name=".StatsActivity"></activity>
+        <activity android:name=".StatsActivity" />
     </application>
 
 </manifest>
